feat: add handler & swagger for API get requested invitations
